tests/integration/graph/snapshots/main__integration__graph__publish__graph_publish_check_failure_is_e043_with_the_check_result.snap
---
source: tests/integration/graph/publish.rs
expression: json
---
{
  "json_version": "3",
  "data": {
    "tasks": {
      "downstream": {
        "task_status": "FAILED",
        "target_url": "https://studio.apollographql.com/graph/my-graph/checks/downstream",
        "variants": [
          {
            "graph_id": "my-graph",
            "variant_name": "mobile",
            "blocking": true,
            "fails_upstream_workflow": true,
            "status": "FAILED"
          }
        ]
      }
    },
    "success": false
  },
  "error": {
    "message": "Schema checks must pass before publishing. Fix the check failures above and try again.",
    "code": "E043"
  }
}
