tests/integration/graph/snapshots/main__integration__graph__publish__graph_publish_json_keeps_the_publish_response_when_the_launch_wait_times_out.snap
---
source: tests/integration/graph/publish.rs
expression: json
---
{
  "json_version": "1",
  "data": {
    "api_schema_hash": "123456",
    "field_changes": {
      "additions": 0,
      "removals": 0,
      "edits": 0
    },
    "type_changes": {
      "additions": 0,
      "removals": 0,
      "edits": 0
    },
    "total_type_count": 1,
    "launch_url": "https://studio.apollographql.com/graph/my-graph/launches/launch-1",
    "launch_status": null,
    "launch_superseded": false,
    "downstream_launches": [],
    "success": false
  },
  "error": {
    "message": "Timed out waiting for the launch to complete.",
    "code": "E065"
  }
}
