tests/integration/graph/snapshots/main__integration__graph__publish__graph_publish_reports_triggered_downstream_launches_in_json.snap
---
source: tests/integration/graph/publish.rs
expression: json
---
{
  "json_version": "1",
  "data": {
    "api_schema_hash": "123456",
    "field_changes": {
      "additions": 0,
      "removals": 0,
      "edits": 0
    },
    "type_changes": {
      "additions": 0,
      "removals": 0,
      "edits": 0
    },
    "total_type_count": 1,
    "launch_url": "https://studio.apollographql.com/graph/my-graph/launches/launch-1",
    "downstream_launches": [
      {
        "graph_id": "my-graph",
        "variant_name": "mobile",
        "status": "COMPLETED",
        "url": "https://studio.apollographql.com/graph/my-graph/launches/launch-2"
      }
    ],
    "success": true
  },
  "error": null
}
